tests/NormalTests/paczka1/fuzzy1/69182530.err
Error in line 3: dx1 A711 27,37
Error in line 1: dSx0jwNQ3 A711 55,8
Error in line 10: dSx0jwNQ3 A122 6,9
Error in line 14: WiBEn A711 55,6
Error in line 12: A122 S780 88,0
Error in line 24: A122 A122 27,6
Error in line 25: A122 A711 80,2
Error in line 28: A122 A122 67,3
Error in line 30: dSx0jwNQ3 A711 3,3
